--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/aldumas/fsm.js#readme",
   "devDependencies": {
-    "jdoc": "^0.2.0"
+    "jsdoc": "^3.6.2"
   }
 }
